# legalos

./: LegalOS_Master_Prompt_Part1.md
legalos/backend/: .env  .env.example  Dockerfile  alembic.ini  pyproject.toml
legalos/backend/app/: config.py  dependencies.py  main.py
legalos/backend/app/core/embeddings/: embedder.py
legalos/backend/app/core/llm/: llm_client.py
legalos/backend/app/core/llm/prompts/: contract_intel_prompts.py  (+2 more)
legalos/backend/app/core/rag/: chunker.py  document_parser.py  rag_pipeline.py
legalos/backend/app/core/schemas/: ai_io_schemas.py
legalos/backend/app/core/vectorstore/: collections.py  qdrant_client.py  retrieval_service.py
legalos/backend/app/migrations/: env.py
legalos/backend/app/migrations/versions/: 001_baseline.py  002_vendor_and_notice.py
legalos/backend/app/shared/: exceptions.py
legalos/backend/app/shared/auth/: auth_service.py
legalos/backend/app/shared/db/: base.py  mixins.py  models.py  session.py
legalos/backend/app/shared/storage/: file_storage.py
legalos/backend/app/workspaces/compliance_center/: .gitkeep
legalos/backend/app/workspaces/contract_intelligence/: models.py  repository.py  router.py  schemas.py  service.py
legalos/backend/app/workspaces/knowledge_hub/: .gitkeep
legalos/backend/app/workspaces/legal_notice_center/: .gitkeep  models.py  repository.py  router.py  schemas.py  service.py
legalos/backend/app/workspaces/vendor_intelligence/: .gitkeep  models.py  repository.py  router.py  schemas.py  service.py
legalos/backend/tests/core/: test_embedder.py  test_llm_client.py  test_smoke.py
(+35 files in other folders)
