[tool.poetry]
name = "legalos-backend"
version = "0.1.0"
description = "Centralized backend for LegalOS"
authors = ["LegalOS Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
qdrant-client = "^1.8.0"
google-genai = "*"
sentence-transformers = "^2.5.1"
pymupdf = "^1.23.26"
python-docx = "^1.1.0"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
